# qr_reader

./: ostu_binarization.cpp
install/: local_setup.sh  setup.sh
install/qr_detector/lib/qr_detector/: qr_detector_node
install/qr_detector/share/qr_detector/: local_setup.sh  package.sh  package.xml
install/qr_detector/share/qr_detector/cmake/: qr_detectorConfig.cmake
install/qrdetector/share/qrdetector/: package.bash  package.zsh
otsu_binarization/: otsu_binarization  otsu_binarization.cpp
src/qrdetector/: CMakeLists.txt
src/qrdetector/src/: qr_detector_node.cpp
zbar+alpha/: README.md  main.cpp  zbar_detector.cpp  zbar_detector.hpp
